--- a/src/View/SearchConsumer.form
+++ b/src/View/SearchConsumer.form
@@ -138,6 +138,9 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfCustIDActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jbtSearch">
           <Properties>
