--- a/src/View/ShowCustomerDetail.form
+++ b/src/View/ShowCustomerDetail.form
@@ -94,14 +94,20 @@
                                               <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                                               <Component id="jbCancel" min="-2" pref="92" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="jtfCreditLimit" min="-2" pref="100" max="-2" attributes="0"/>
                                           <Component id="jtfLastOrderDate" alignment="0" min="-2" pref="171" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="jtfContactNo" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jtfCreditLimit" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="jlblRemaining" min="-2" pref="172" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="jtfRemaining" min="-2" pref="100" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="52" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -151,14 +157,22 @@
                       <Component id="jlblLocation" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" alignment="0" min="-2" pref="71" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                           <Component id="jlblCreditLimit" min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                          <Component id="jlblRemaining" min="-2" pref="35" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jtfCreditLimit" min="-2" pref="35" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jtfRemaining" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -363,6 +377,20 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfLastOrderDate">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jlblRemaining">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="24" style="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="text" type="java.lang.String" value="Remaining:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jtfRemaining">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
           </Properties>
